<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">311 Toronto</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_desc">Blurred picture of Toronto skyline</string>
    <string name="splash_hello">Hello!</string>
    <string name="splash_welcome_sentence">Welcome to 311 Toronto</string>
    <string name="splash_text_colour">#ffffff</string>
    <string name="splash_login_btn">Log in with an existing account</string>
    <string name="splash_anonymous_btn">Use App Anonymously</string>
    <string name="toast_anonymous">Using the app anonymously</string>
    <string name="toast_signedin">Signed in as </string>
    <string name="login_dialog_title">Choose an Account</string>
    <string name="login_no_accounts">No accounts available!</string>
    <string name="login_ok">OK</string>
    <string name="login_cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Report</string>
    <string name="title_section2">List</string>
    <string name="title_section3">Track</string>
    <string name="title_section4">Me</string>
    <string name="preference_file_key">com.f3ndot.toronto311.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_first_run">FirstRunActivity</string>
    <string name="touch_report_type_txt">Touch a report type</string>
    <string name="report_pothole_type_btn">Pothole</string>
    <string name="report_graffiti_type_btn">Graffiti</string>

</resources>