<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/touch_report_type_txt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#bbb" />

    <Button
        android:id="@+id/report_pothole_type_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="?android:attr/borderlessButtonStyle"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/report_pothole_type_btn" />

    <Button
        android:id="@+id/report_graffiti_type_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="?android:attr/borderlessButtonStyle"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/report_graffiti_type_btn" />

</LinearLayout>